{
  "version": 4,
  "terraform_version": "0.12.24",
  "serial": 65,
  "lineage": "cf298c55-43dd-5b91-96be-1ea698022f62",
  "resources": [
    {
      "module": "module.openvpn-eip",
      "mode": "managed",
      "type": "aws_eip",
      "name": "default",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "association_id": "eipassoc-0a5b9930025aa92c3",
            "domain": "vpc",
            "id": "eipalloc-0ed1c9fcfadbb143c",
            "instance": "i-03212586fb514d5a6",
            "network_interface": "eni-0c4d070fcc1eb1edc",
            "private_dns": "ip-10-20-1-223.ec2.internal",
            "private_ip": "10.20.1.223",
            "public_dns": "ec2-34-202-187-15.compute-1.amazonaws.com",
            "public_ip": "34.202.187.15",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "vault"
            },
            "vpc": true
          },
          "dependencies": [
            "module.ec2-openvpn.aws_instance.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "eip-ngw",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "domain": "vpc",
            "id": "eipalloc-068ea64439f568057",
            "public_dns": "ec2-18-211-4-17.compute-1.amazonaws.com",
            "public_ip": "18.211.4.17",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "infragurus-vault-dev-eip-nat-gateway-1"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "module": "module.ec2-vault-master",
      "mode": "managed",
      "type": "aws_instance",
      "name": "this",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-085925f297f89fce1",
            "arn": "arn:aws:ec2:us-east-1:117519388977:instance/i-0f58d4612fe1d92e6",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-1a",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0f58d4612fe1d92e6",
            "instance_state": "running",
            "instance_type": "t3a.medium",
            "ipv6_address_count": 0,
            "key_name": "vault-master",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0d656b9803062e74c",
            "private_dns": "ip-10-20-4-144.ec2.internal",
            "private_ip": "10.20.4.144",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": true,
                "iops": 100,
                "kms_key_id": "arn:aws:kms:us-east-1:117519388977:key/f687f44c-5927-4850-b71b-8b61adbe8a9b",
                "volume_id": "vol-09e316584e990e0fd",
                "volume_size": 10,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0291932bac862f4b4",
            "tags": {
              "Name": "infragurus-dev-vault-master-1"
            },
            "tenancy": "default",
            "volume_tags": {
              "Name": "infragurus-dev-vault-master-1"
            },
            "vpc_security_group_ids": [
              "sg-06a40e8ca70862296"
            ]
          },
          "dependencies": [
            "module.sg2.aws_security_group.default",
            "module.vpc.aws_subnet.private-subnets"
          ]
        }
      ]
    },
    {
      "module": "module.ec2-openvpn",
      "mode": "managed",
      "type": "aws_instance",
      "name": "this",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0fc61db8544a617ed",
            "arn": "arn:aws:ec2:us-east-1:117519388977:instance/i-03212586fb514d5a6",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-03212586fb514d5a6",
            "instance_state": "running",
            "instance_type": "t3a.medium",
            "ipv6_address_count": 0,
            "key_name": "vault-demo",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0c4d070fcc1eb1edc",
            "private_dns": "ip-10-20-1-223.ec2.internal",
            "private_ip": "10.20.1.223",
            "public_dns": "ec2-18-215-249-204.compute-1.amazonaws.com",
            "public_ip": "18.215.249.204",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": true,
                "iops": 100,
                "kms_key_id": "arn:aws:kms:us-east-1:117519388977:key/f687f44c-5927-4850-b71b-8b61adbe8a9b",
                "volume_id": "vol-00c874cdd8aa265dc",
                "volume_size": 10,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-01200020e86d80663",
            "tags": {
              "Name": "infragurus-dev-openvpn-1"
            },
            "tenancy": "default",
            "volume_tags": {
              "Name": "infragurus-dev-openvpn-1"
            },
            "vpc_security_group_ids": [
              "sg-084bf33be3983a989"
            ]
          },
          "dependencies": [
            "module.sg1.aws_security_group.default",
            "module.vpc.aws_subnet.public-subnets"
          ]
        }
      ]
    },
    {
      "module": "module.ec2-vault-failover",
      "mode": "managed",
      "type": "aws_instance",
      "name": "this",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-085925f297f89fce1",
            "arn": "arn:aws:ec2:us-east-1:117519388977:instance/i-0f8f66b874fd595f4",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-1a",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0f8f66b874fd595f4",
            "instance_state": "running",
            "instance_type": "t3a.medium",
            "ipv6_address_count": 0,
            "key_name": "vault-failover",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-002f017838b77fe98",
            "private_dns": "ip-10-20-4-201.ec2.internal",
            "private_ip": "10.20.4.201",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": true,
                "iops": 100,
                "kms_key_id": "arn:aws:kms:us-east-1:117519388977:key/f687f44c-5927-4850-b71b-8b61adbe8a9b",
                "volume_id": "vol-09c61ce708408fd11",
                "volume_size": 10,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0291932bac862f4b4",
            "tags": {
              "Name": "infragurus-dev-vault-failover-1"
            },
            "tenancy": "default",
            "volume_tags": {
              "Name": "infragurus-dev-vault-failover-1"
            },
            "vpc_security_group_ids": [
              "sg-06a40e8ca70862296"
            ]
          },
          "dependencies": [
            "module.sg2.aws_security_group.default",
            "module.vpc.aws_subnet.private-subnets"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "igw-00f2eb1f99398aed6",
            "owner_id": "117519388977",
            "tags": {
              "Name": "infragurus-vault-dev-igw"
            },
            "vpc_id": "vpc-03e96e69f9aa1e2ab"
          },
          "dependencies": [
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "ngw",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-068ea64439f568057",
            "id": "nat-0600101c1f0689b29",
            "network_interface_id": "eni-025c6c17068ee4639",
            "private_ip": "10.20.1.123",
            "public_ip": "18.211.4.17",
            "subnet_id": "subnet-01200020e86d80663",
            "tags": {
              "Name": "infragurus-vault-dev-nat-gateway-1"
            }
          },
          "dependencies": [
            "module.vpc.aws_eip.eip-ngw",
            "module.vpc.aws_subnet.public-subnets",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "database-routes",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtb-091573b4bcf4e5669",
            "owner_id": "117519388977",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "nat-0600101c1f0689b29",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "infragurus-vault-dev-db-route-1"
            },
            "vpc_id": "vpc-03e96e69f9aa1e2ab"
          },
          "dependencies": [
            "module.vpc.aws_eip.eip-ngw",
            "module.vpc.aws_nat_gateway.ngw",
            "module.vpc.aws_subnet.public-subnets",
            "module.vpc.aws_vpc.vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtb-038afd7e119fac7b2",
            "owner_id": "117519388977",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "nat-0600101c1f0689b29",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "infragurus-vault-dev-db-route-2"
            },
            "vpc_id": "vpc-03e96e69f9aa1e2ab"
          },
          "dependencies": [
            "module.vpc.aws_eip.eip-ngw",
            "module.vpc.aws_nat_gateway.ngw",
            "module.vpc.aws_subnet.public-subnets",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private-routes",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtb-05732c89d7e42c404",
            "owner_id": "117519388977",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "nat-0600101c1f0689b29",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "infragurus-vault-dev-private-routes-1"
            },
            "vpc_id": "vpc-03e96e69f9aa1e2ab"
          },
          "dependencies": [
            "module.vpc.aws_eip.eip-ngw",
            "module.vpc.aws_nat_gateway.ngw",
            "module.vpc.aws_subnet.public-subnets",
            "module.vpc.aws_vpc.vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtb-05833679d904be44e",
            "owner_id": "117519388977",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "nat-0600101c1f0689b29",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "infragurus-vault-dev-private-routes-2"
            },
            "vpc_id": "vpc-03e96e69f9aa1e2ab"
          },
          "dependencies": [
            "module.vpc.aws_eip.eip-ngw",
            "module.vpc.aws_nat_gateway.ngw",
            "module.vpc.aws_subnet.public-subnets",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public-routes",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-0d04db5002753c440",
            "owner_id": "117519388977",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-00f2eb1f99398aed6",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "infragurus-vault-dev-public-routes"
            },
            "vpc_id": "vpc-03e96e69f9aa1e2ab"
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "database-routes-association",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0162f748a35aa9114",
            "route_table_id": "rtb-091573b4bcf4e5669",
            "subnet_id": "subnet-0e9ea455b6a3dfe6a"
          },
          "dependencies": [
            "module.vpc.aws_eip.eip-ngw",
            "module.vpc.aws_nat_gateway.ngw",
            "module.vpc.aws_route_table.database-routes",
            "module.vpc.aws_subnet.database",
            "module.vpc.aws_subnet.public-subnets",
            "module.vpc.aws_vpc.vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0b0c7c8b9422874af",
            "route_table_id": "rtb-038afd7e119fac7b2",
            "subnet_id": "subnet-0933e10c70bfa8c56"
          },
          "dependencies": [
            "module.vpc.aws_eip.eip-ngw",
            "module.vpc.aws_nat_gateway.ngw",
            "module.vpc.aws_route_table.database-routes",
            "module.vpc.aws_subnet.database",
            "module.vpc.aws_subnet.public-subnets",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private-routes-linking",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-05319c02edebe3b53",
            "route_table_id": "rtb-05732c89d7e42c404",
            "subnet_id": "subnet-0291932bac862f4b4"
          },
          "dependencies": [
            "module.vpc.aws_eip.eip-ngw",
            "module.vpc.aws_nat_gateway.ngw",
            "module.vpc.aws_route_table.private-routes",
            "module.vpc.aws_subnet.private-subnets",
            "module.vpc.aws_subnet.public-subnets",
            "module.vpc.aws_vpc.vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0070e99213e2513c9",
            "route_table_id": "rtb-05833679d904be44e",
            "subnet_id": "subnet-0f215952a06a891b7"
          },
          "dependencies": [
            "module.vpc.aws_eip.eip-ngw",
            "module.vpc.aws_nat_gateway.ngw",
            "module.vpc.aws_route_table.private-routes",
            "module.vpc.aws_subnet.private-subnets",
            "module.vpc.aws_subnet.public-subnets",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public-association",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0464ab25567fbd48e",
            "route_table_id": "rtb-0d04db5002753c440",
            "subnet_id": "subnet-01200020e86d80663"
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_route_table.public-routes",
            "module.vpc.aws_subnet.public-subnets",
            "module.vpc.aws_vpc.vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-00781f6b62db8ae53",
            "route_table_id": "rtb-0d04db5002753c440",
            "subnet_id": "subnet-029794224cb314085"
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_route_table.public-routes",
            "module.vpc.aws_subnet.public-subnets",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.sg1",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "default",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:117519388977:security-group/sg-084bf33be3983a989",
            "description": "vault group managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "All egress traffic",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-084bf33be3983a989",
            "ingress": [
              {
                "cidr_blocks": [
                  "111.119.187.1/32"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "111.119.187.1/32"
                ],
                "description": "",
                "from_port": 23525,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "udp",
                "security_groups": [],
                "self": false,
                "to_port": 23525
              },
              {
                "cidr_blocks": [
                  "111.119.187.1/32"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "111.119.187.1/32"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "111.119.187.1/32"
                ],
                "description": "",
                "from_port": 8201,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8201
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": true,
                "to_port": 0
              }
            ],
            "name": "vault",
            "name_prefix": null,
            "owner_id": "117519388977",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "infragurus-dev-vault",
              "Namespace": "infragurus",
              "Stage": "dev"
            },
            "timeouts": null,
            "vpc_id": "vpc-03e96e69f9aa1e2ab"
          },
          "dependencies": [
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.sg2",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "default",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:117519388977:security-group/sg-06a40e8ca70862296",
            "description": "vault-Ref group managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "All egress traffic",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-06a40e8ca70862296",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [
                  "sg-084bf33be3983a989"
                ],
                "self": false,
                "to_port": 0
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-084bf33be3983a989"
                ],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-084bf33be3983a989"
                ],
                "self": false,
                "to_port": 3306
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-084bf33be3983a989"
                ],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-084bf33be3983a989"
                ],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 8201,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-084bf33be3983a989"
                ],
                "self": false,
                "to_port": 8201
              }
            ],
            "name": "vault-Ref",
            "name_prefix": null,
            "owner_id": "117519388977",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "infragurus-dev-vault-ref",
              "Namespace": "infragurus",
              "Stage": "dev"
            },
            "timeouts": null,
            "vpc_id": "vpc-03e96e69f9aa1e2ab"
          },
          "dependencies": [
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.sg1",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "egress",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "All egress traffic",
            "from_port": 0,
            "id": "sgrule-3874409271",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-084bf33be3983a989",
            "self": false,
            "source_security_group_id": null,
            "to_port": 0,
            "type": "egress"
          },
          "dependencies": [
            "module.sg1.aws_security_group.default"
          ]
        }
      ]
    },
    {
      "module": "module.sg2",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "egress",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "All egress traffic",
            "from_port": 0,
            "id": "sgrule-407884424",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-06a40e8ca70862296",
            "self": false,
            "source_security_group_id": null,
            "to_port": 0,
            "type": "egress"
          },
          "dependencies": [
            "module.sg2.aws_security_group.default"
          ]
        }
      ]
    },
    {
      "module": "module.sg1",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "tcp",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "111.119.187.1/32"
            ],
            "description": "",
            "from_port": 22,
            "id": "sgrule-2354536743",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-084bf33be3983a989",
            "self": false,
            "source_security_group_id": null,
            "to_port": 22,
            "type": "ingress"
          },
          "dependencies": [
            "module.sg1.aws_security_group.default"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "111.119.187.1/32"
            ],
            "description": "",
            "from_port": 80,
            "id": "sgrule-2370151292",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-084bf33be3983a989",
            "self": false,
            "source_security_group_id": null,
            "to_port": 80,
            "type": "ingress"
          },
          "dependencies": [
            "module.sg1.aws_security_group.default"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "111.119.187.1/32"
            ],
            "description": "",
            "from_port": 443,
            "id": "sgrule-2575878288",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-084bf33be3983a989",
            "self": false,
            "source_security_group_id": null,
            "to_port": 443,
            "type": "ingress"
          },
          "dependencies": [
            "module.sg1.aws_security_group.default"
          ]
        },
        {
          "index_key": 3,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "111.119.187.1/32"
            ],
            "description": "",
            "from_port": 8201,
            "id": "sgrule-3614114422",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-084bf33be3983a989",
            "self": false,
            "source_security_group_id": null,
            "to_port": 8201,
            "type": "ingress"
          },
          "dependencies": [
            "module.sg1.aws_security_group.default"
          ]
        },
        {
          "index_key": 4,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "111.119.187.1/32"
            ],
            "description": "",
            "from_port": 23525,
            "id": "sgrule-158489105",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-084bf33be3983a989",
            "self": false,
            "source_security_group_id": null,
            "to_port": 23525,
            "type": "ingress"
          },
          "dependencies": [
            "module.sg1.aws_security_group.default"
          ]
        }
      ]
    },
    {
      "module": "module.sg2",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "tcp",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "",
            "from_port": 22,
            "id": "sgrule-826377358",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-06a40e8ca70862296",
            "self": false,
            "source_security_group_id": "sg-084bf33be3983a989",
            "to_port": 22,
            "type": "ingress"
          },
          "dependencies": [
            "module.sg1.aws_security_group.default",
            "module.sg2.aws_security_group.default"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "",
            "from_port": 80,
            "id": "sgrule-2759793286",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-06a40e8ca70862296",
            "self": false,
            "source_security_group_id": "sg-084bf33be3983a989",
            "to_port": 80,
            "type": "ingress"
          },
          "dependencies": [
            "module.sg1.aws_security_group.default",
            "module.sg2.aws_security_group.default"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "",
            "from_port": 443,
            "id": "sgrule-2424878893",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-06a40e8ca70862296",
            "self": false,
            "source_security_group_id": "sg-084bf33be3983a989",
            "to_port": 443,
            "type": "ingress"
          },
          "dependencies": [
            "module.sg1.aws_security_group.default",
            "module.sg2.aws_security_group.default"
          ]
        },
        {
          "index_key": 3,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "",
            "from_port": 8201,
            "id": "sgrule-1726731930",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-06a40e8ca70862296",
            "self": false,
            "source_security_group_id": "sg-084bf33be3983a989",
            "to_port": 8201,
            "type": "ingress"
          },
          "dependencies": [
            "module.sg1.aws_security_group.default",
            "module.sg2.aws_security_group.default"
          ]
        },
        {
          "index_key": 4,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "",
            "from_port": 3306,
            "id": "sgrule-993903049",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-06a40e8ca70862296",
            "self": false,
            "source_security_group_id": "sg-084bf33be3983a989",
            "to_port": 3306,
            "type": "ingress"
          },
          "dependencies": [
            "module.sg1.aws_security_group.default",
            "module.sg2.aws_security_group.default"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "database",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:117519388977:subnet/subnet-0e9ea455b6a3dfe6a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.20.7.0/24",
            "id": "subnet-0e9ea455b6a3dfe6a",
            "map_public_ip_on_launch": false,
            "owner_id": "117519388977",
            "tags": {
              "Name": "infragurus-vault-dev-db-subnet-1"
            },
            "vpc_id": "vpc-03e96e69f9aa1e2ab"
          },
          "dependencies": [
            "module.vpc.aws_vpc.vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:117519388977:subnet/subnet-0933e10c70bfa8c56",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.20.8.0/24",
            "id": "subnet-0933e10c70bfa8c56",
            "map_public_ip_on_launch": false,
            "owner_id": "117519388977",
            "tags": {
              "Name": "infragurus-vault-dev-db-subnet-2"
            },
            "vpc_id": "vpc-03e96e69f9aa1e2ab"
          },
          "dependencies": [
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private-subnets",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:117519388977:subnet/subnet-0291932bac862f4b4",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.20.4.0/24",
            "id": "subnet-0291932bac862f4b4",
            "map_public_ip_on_launch": false,
            "owner_id": "117519388977",
            "tags": {
              "Name": "infragurus-vault-dev-private-subnets-1"
            },
            "vpc_id": "vpc-03e96e69f9aa1e2ab"
          },
          "dependencies": [
            "module.vpc.aws_vpc.vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:117519388977:subnet/subnet-0f215952a06a891b7",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.20.5.0/24",
            "id": "subnet-0f215952a06a891b7",
            "map_public_ip_on_launch": false,
            "owner_id": "117519388977",
            "tags": {
              "Name": "infragurus-vault-dev-private-subnets-2"
            },
            "vpc_id": "vpc-03e96e69f9aa1e2ab"
          },
          "dependencies": [
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public-subnets",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:117519388977:subnet/subnet-01200020e86d80663",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.20.1.0/24",
            "id": "subnet-01200020e86d80663",
            "map_public_ip_on_launch": true,
            "owner_id": "117519388977",
            "tags": {
              "Name": "infragurus-vault-dev-public-subnets-1"
            },
            "vpc_id": "vpc-03e96e69f9aa1e2ab"
          },
          "dependencies": [
            "module.vpc.aws_vpc.vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:117519388977:subnet/subnet-029794224cb314085",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.20.2.0/24",
            "id": "subnet-029794224cb314085",
            "map_public_ip_on_launch": true,
            "owner_id": "117519388977",
            "tags": {
              "Name": "infragurus-vault-dev-public-subnets-2"
            },
            "vpc_id": "vpc-03e96e69f9aa1e2ab"
          },
          "dependencies": [
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:117519388977:vpc/vpc-03e96e69f9aa1e2ab",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.20.0.0/16",
            "default_network_acl_id": "acl-012a0892406d13dee",
            "default_route_table_id": "rtb-06f867a02ad511e00",
            "default_security_group_id": "sg-07e3cd7dae38d1fca",
            "dhcp_options_id": "dopt-01cf0a916f4ed155f",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-03e96e69f9aa1e2ab",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-06f867a02ad511e00",
            "owner_id": "117519388977",
            "tags": {
              "Location": "Virginia",
              "Name": "infragurus-vault-dev-vpc",
              "Namespace": "infragurus",
              "Stage": "vault-dev"
            }
          }
        }
      ]
    }
  ]
}